[package]
name = "nexus-server"
version = "0.1.0"
edition = "2021"

# Это главный файл, который Cargo будет искать в src/main.rs
[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
log = "0.4"
flexi_logger = "0.27"
tun = { version = "0.6", features = ["async"] }
bytes = "1.5"
async-channel = "2.1"
socket2 = "0.5"